--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: linear-gradient(145deg, #0f0f10, #1c1c1f);
     color: #e0e0e0;
 }
 
@@ -39,13 +38,14 @@
     scrollbar-width: thin;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
+    background: linear-gradient(145deg, #0f0f10, #1c1c1f);
 }
 
 .box {
     padding: 5px 18px;
     width: fit-content;
     max-width: 70%;
-    background: #b5ffb5;
+    background: rgb(169, 168, 168);
     border-radius: 16px 16px 16px 0;
     font-size: 15px;
     line-height: 1.4;
@@ -66,7 +66,7 @@
 }
 .box.another {
     margin-left: auto;
-    background: #dbedff;
+    background: rgb(88, 159, 229);
     border-radius: 16px 16px 0 16px;
     color: black;
 }
@@ -81,6 +81,7 @@ form.form-control {
     background-color: #fff;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
+    background: linear-gradient(145deg, #0f0f10, #1c1c1f);
     box-shadow: 0 -2px 10px rgba(0,0,0,0.05);
 }
 
@@ -92,6 +93,7 @@ form.form-control {
     outline: none;
     font-size: 14px;
     transition: 0.3s;
+    
 }
 
 .message:focus {
@@ -100,7 +102,7 @@ form.form-control {
 
 button {
     padding: 12px 20px;
-    background-color: gray;
+    background-color: dodgerblue;
     color: white;
     border: none;
     border-radius: 10px;
